# palm

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  default.conf  docker-compose.yaml  fly.toml  minio-docker-compose.yaml  mongo-docker-compose.yaml  pyproject.toml  redis-docker-compose.yaml
api/: DESCRIPTION.md  common.py  errors.py  index.html  jwt.py  main.py  messages.py  responses.py  routes.py  services.py  settings.py
api/auth/: DESCRIPTION.md  app.py
api/chat/: groq_cloud.py  routes.py  services.py
api/db/: cache.py  persistant.py  storage.py
api/db/implements/: mongo.py  redis.py
api/epson/: __init__.py  print.py  routes.py
api/misc/: routes.py  services.py
api/orbit/: routes.py  services.py
api/plan/: routes.py  services.py
api/resources/: routes.py  services.py
api/resources/picture/: routes.py  services.py
api/resources/theme/: routes.py
api/users/: routes.py
enums/: auth.py  orbit.py  users.py
responses/: auth.py  common.py
schemas/: __init__.py  auth.py  chat.py  misc.py  orbit.py  pictures.py  plan.py  resources.py  users.py
web/: package-lock.json  package.json
web/src/routes/: styles.css
web/src/routes/gallery/: +page.svelte
